# fastAPI

./: dockerfile  main.py  pyproject.toml  requirements.txt
routes/: user.py
